# chat

./: .env  .gitignore  Cargo.toml  README.md  _typos.toml  app.yml  test.rest
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/src/: lib.rs
chat_core/src/middleware/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yml
chat_server/fixtures/: decoding_key.pem  encoding_key.pem  test.sql
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  mod.rs  workspace.rs
chat_server/src/middleware/: auth.rs  chat.rs  mod.rs  server_time.rs
chat_server/src/models/: chat.rs  file.rs  messages.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml  app.yml  notify.yml
chat_test/examples/: test.rs
chat_test/tests/: chats.rs
migrations/: 20240707160808_initial.sql  20240722133411_workspace.sql  20240903163849_triggers.sql
notify_server/: Cargo.toml  index.html
notify_server/fixtures/: test.sql
notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notify.rs  sse.rs
sql/: init.sql
src/: config.rs  lib.rs  main.rs
src/handlers/: chat.rs  messages.rs  mod.rs
