[workspace]
members = ["chat_server", "chat_core", "notify_server", "chat_test"]
resolver = "2"


[workspace.dependencies]
chat-server = { path = "./chat_server" }
notify-server = { path = "./notify_server" }
chat-core = { path = "./chat_core" }
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "query", "tracing", "multipart"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4.38", features = ["serde"] }
jwt-simple = "0.12.9"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["compression-full", "fs","trace"] }
uuid = { version = "1.10.0", features = ["v7", "serde"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"] }
