[package]
name = "chat-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx =  {workspace = true}
serde =  {workspace = true}
chrono =  {workspace = true}
jwt-simple = {workspace = true}
anyhow = {workspace = true}
axum =  {workspace = true}
axum-extra = { workspace = true }
tokio =  {workspace = true}
tracing =  {workspace = true}
tracing-subscriber =  {workspace = true}
tower = {workspace = true}
tower-http = { workspace = true }
uuid = {workspace = true}
