[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
argon2 = { version = "0.5.3", features = ["std"] }
axum =  {workspace = true}
axum-extra = { workspace = true }
chrono = { workspace = true }
hex = "0.4.3"
mime_guess = "2.0.5"
serde =  {workspace = true}
serde_yaml =  {workspace = true}
sha1 = "0.10.6"
sqlx =  {workspace = true}
thiserror =  {workspace = true}
tokio =  {workspace = true}
tower = {workspace = true}
tower-http = { workspace = true }
tracing =  {workspace = true}
tracing-subscriber =  {workspace = true}
chat-core = { path = "../chat_core" }
uuid = {workspace = true}
jwt-simple = {workspace = true}

[dev-dependencies]
sqlx-db-tester = "0.4.2"
http-body-util = "0.1.2"
