[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
test-util = ["http-body-util", "sqlx-db-tester"]

[dependencies]
anyhow = {workspace = true}
argon2 = { version = "0.5.3", features = ["std"] }
axum =  {workspace = true}
axum-extra = { workspace = true }
chrono = { workspace = true }
hex = "0.4.3"
mime_guess = "2.0.5"
serde =  {workspace = true}
serde_yaml =  {workspace = true}
sha1 = "0.10.6"
sqlx =  {workspace = true}
thiserror =  {workspace = true}
tokio =  {workspace = true}
tower = {workspace = true}
tower-http = { workspace = true }
tracing =  {workspace = true}
tracing-subscriber =  {workspace = true}
chat-core = { path = "../chat_core" }
uuid = {workspace = true}
jwt-simple = {workspace = true}
sqlx-db-tester = {version = "0.4.2", optional = true}
http-body-util = {version = "0.1.2",optional = true}
utoipa = { workspace = "true" }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.1.0", features = ["axum"] }

[dev-dependencies]
chat-server = { workspace = true , features = ["test-util"]}
