[package]
name = "notify-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
axum =  {workspace = true, features = ["macros"]}
axum-extra = { version = "0.9.3", features = ["typed-header"] }
futures = "0.3.30"
serde =  {workspace = true}
serde_yaml =  {workspace = true}
sqlx =  {workspace = true}
thiserror =  {workspace = true}
tokio =  {workspace = true}
tokio-stream = {version="0.1.15", features = ["sync"]}
tracing =  {workspace = true}
tracing-subscriber =  {workspace = true}
chat-core = { path = "../chat_core" }
jwt-simple = {workspace = true}
dashmap = "6.1.0"
